# CoverageReporter

./: .gitignore  Cargo.toml  Dockerfile  lcov.info
.github/workflows/: release.yaml
coverage_report/: Cargo.toml
coverage_report/src/: lib.rs
lcov_parsing/: Cargo.toml
lcov_parsing/src/: lib.rs
lcov_parsing/src/unprocessed_report/: mod.rs
src/: main.rs
template_formatter/: Cargo.toml
template_formatter/src/: lib.rs
template_formatter/src/helpers/: mod.rs  padding_helper.rs  percent_format_helper.rs  repeat_helper.rs  threshold_color_helper.rs
template_formatter/src/template_options/: mod.rs
template_formatter/templates/: default.hbs  default_console.hbs
