[package]
name = "template_formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "6.4.2"
handlebars = {version = "4.3.5", features = ["rust-embed"]}
coverage_report = { path = "../coverage_report" }
